chessDeploy/kubeApp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeapp
spec:
  selector:
    matchLabels:
      app: kubeapp
  template:
    metadata:
      labels:
        app: kubeapp
    spec:
      containers:
      - name: kubeapp
        image: chesscorp/chess-club
