chessDeploy/kubeAppService.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubeapp
spec:
  selector:
    app: kubeapp
  ports:
  - port: 80
    targetPort: 80
